Update .HomePage-link style to lessen padding-bottom. Avoids bug where border-bottom might intersect with text below on smaller line-heighths

--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -59,7 +59,7 @@ blockquote {
 
 .HomePage-link {
   color: inherit;
-  padding-bottom: 0.25rem;
+  padding-bottom: 0.1rem;
 }
 
 .HomePage-link:hover {
